Make teams & users pagination work statically
Command:
  for FILE in teams\?page=* users\?page=*; do
    git mv "$FILE" "${FILE/\?page=/_page_}.html"
  done

  sed -i 's/\?page=/_page_/g' teams*.html users*.html

--- a/teams_page_11.html
+++ b/teams_page_11.html
@@ -493,7 +493,7 @@
             Page <br>
 
             
-              <a href="/teams?page=10">&lt;&lt;&lt;</a>
+              <a href="/teams_page_10">&lt;&lt;&lt;</a>
             
 
             <select class="page-select">
