--- a/users_page_18.html
+++ b/users_page_18.html
@@ -826,7 +826,7 @@
             Page <br>
 
             
-              <a href="/users?page=17">&lt;&lt;&lt;</a>
+              <a href="/users_page_17">&lt;&lt;&lt;</a>
             
 
             <select class="page-select">
