Add JS hooks to challenge page for flag verify & hints

--- a/challenges.html
+++ b/challenges.html
@@ -368,6 +368,7 @@
 
 
 <script defer type="module" src="/themes/kasino/static/assets/index.00892cd3.js"></script><script defer type="module" src="/themes/kasino/static/assets/challenges.8437270c.js"></script>
+<script defer type="module" src="/ctfd2pages/hooks/challenges.min.js"></script>
 
 
 
